--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bot.js",
   "dependencies": {
     "aki-api": "^3.2.1",
+    "body-parser": "^1.19.0",
     "discord.js": "^11.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
