--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "aki-api": "^3.2.1",
     "body-parser": "^1.19.0",
+    "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1",
+    "erlpack": "github:hammerandchisel/erlpack",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "libsodium-wrappers": "^0.7.6",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
     "passport-discord.js": "^0.0.6",
