--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "description": "qualitybot rebuilt to use a database for website functionality.",
   "main": "bot.js",
   "dependencies": {
+    "@discordjs/uws": "^10.149.0",
     "aki-api": "^3.2.1",
     "body-parser": "^1.19.0",
     "bufferutil": "^4.0.1",
-    "discord.js": "^11.5.1",
+    "discord.js": "^11.6.4",
     "erlpack": "github:hammerandchisel/erlpack",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
+    "express-session": "^1.17.1",
     "libsodium-wrappers": "^0.7.6",
-    "passport": "^0.4.0",
-    "passport-discord": "^0.1.3",
+    "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "passport-discord.js": "^0.0.6",
     "pug": "^2.0.4",
     "redis": "^2.8.0",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "weather-js": "^2.0.0"
   },
   "devDependencies": {},
